fixed: box-shadow on contents

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,6 +85,7 @@ textarea::placeholder {
 }
 
 .shadow-md {
+  border-top: 1.5px solid var(--color-shadow);
   box-shadow: 0 4px 6px -1px var(--color-shadow), 0 2px 4px -1px var(--color-shadow) !important;
 }
 
