--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&family=Stint+Ultra+Expanded&family=Tagesschrift&display=swap');
 :root {
   /* Light theme colors */
   --color-bg: #f8fafc;
@@ -38,6 +39,7 @@
 body {
   background-color: var(--color-bg);
   color: var(--color-text);
+  font-family: 'Poppins', sans-serif;
 }
 h1{
   font-family: 'Great Vibes';
@@ -115,14 +117,11 @@ textarea::placeholder {
 .mood-label.active {
   background-color: rgb(15 118 110) !important;
   color: white;
-<<<<<<< HEAD
   border-color: rgb(15 118 110);
   transform: scale(1.1);
   transition: all 0.2s ease;
 }
-=======
-  border-color: #3b82f6;
-}
+
 
 /* Print styles */
 @media print {
@@ -138,7 +137,6 @@ textarea::placeholder {
 /* Mood selection styling */
 .mood-checkbox:checked + .mood-label {
   border-color: #4f46e5;
-  background-color: #eef2ff;
 }
 
 .mood-label {
@@ -167,7 +165,7 @@ textarea::placeholder {
 }
 
 .entry-content:hover {
-  background-color: #f9fafb;
+  /* background-color: #f9fafb; */
 }
 
 /* Highlight styling for search results */
@@ -238,4 +236,3 @@ textarea::placeholder {
 }
 
 /* Custom scrollbar */
->>>>>>> scripts
